# auto-traffic-control

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yml  404.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-MIT  README.md  docs.html  index.html  sitemap.xml
.github/: dependabot.yml  labels.yml  release.yml
.github/workflows/: docker.yml  documentation.yml  json.yml  maintenance.yml  markdown.yml  pr-sdk.yml  protobuf.yml  push-docs.yml  push-json.yml  push-main.yml  push-markdown.yml  push-protobuf.yml  push-rust.yml  push-shell.yml  push-yaml.yml  release-docs.yml  release-itch.yml  release-sdk.yml  repository.yml  rust.yml  shell.yml  test-docs.yml  test-json.yml  test-markdown.yml  test-protobuf.yml  test-rust.yml  test-sdk.yml  test-shell.yml  test-yaml.yml  yaml.yml
api/: buf.gen.yaml
assets/css/: styles.005f6cee.css  styles.612429ce.css  styles.6c340478.css
assets/js/: 17896441.12d85dcc.js  17896441.3d5710c1.js  17896441.947ec358.js  19910e16.50ef7d35.js  19910e16.a25ac140.js  19910e16.e44cfa64.js  1be78505.6121b9c6.js  1be78505.8612fd0d.js  1be78505.e63c6f3d.js  1be78505.f5b937b1.js  1f391b9e.65b9caf4.js  1f391b9e.77ae40dc.js  1f391b9e.96b2f60c.js  2bb1d541.3bedfd68.js  2bb1d541.b1e8a83d.js  2bb1d541.d1d6d36d.js  2e544717.09fae283.js  2e544717.1355192f.js  2e544717.17148c74.js  2e544717.1db00215.js  2e544717.a432a2a1.js  2e544717.c3e32a30.js  383d31c1.091c706d.js  383d31c1.71827126.js  383d31c1.b162d050.js  41352e56.2e87f2cc.js  41352e56.37cc2a7f.js  41352e56.79455631.js  545.2fdfff4b.js  5e8c322a.0bcd63b6.js  5e8c322a.0e2d45f1.js  5e8c322a.16ef56f6.js  5e8c322a.726693a6.js  608.b0c89fb6.js  608.cf5acaac.js  666.17f29368.js  724.10b3a67a.js  8cc9f486.2c5099b9.js  8cc9f486.2ded0cc3.js  8cc9f486.d80fb118.js  (+97 more)
docs/: README.md  api.html  coordinates.html  docusaurus.config.js  getting-started.html  package-lock.json  package.json  rules.html  sidebars.js  tutorial.html
docs/api/: events.html  introduction.html  types.html
docs/docs/: coordinates.md  getting-started.md  index.md  rules.md
docs/tutorial/: events.html  game.html  installation.html  sdk.html  typescript.html
examples/dotnet/: .gitignore  AutoTrafficControlExample.csproj  Program.cs
examples/java/: .gitignore  README.md  build.gradle  gradlew  sdk  settings.gradle
examples/javascript/: main.js  package-lock.json  package.json
examples/python/: play.py
examples/ruby/: .gitignore  .rubocop.yml  Gemfile  README.md  Rakefile  auto_traffic_control_example.gemspec
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/starter-rust/: Cargo.toml
examples/starter-rust/src/: main.rs  map.rs  point.rs  route.rs
examples/typescript/: main.ts  package-lock.json  package.json  tsconfig.json
game/: Cargo.toml
game/api/: Cargo.toml
game/api/src/: airplane.rs  event.rs  game.rs  lib.rs  map.rs  store.rs
game/cli/: Cargo.toml  Dockerfile
game/cli/src/: main.rs
game/simulation/: Cargo.toml
game/simulation/maps/: sandbox.txt  test.txt
game/simulation/src/: component.rs  lib.rs
game/simulation/src/behavior/: commandable.rs  mod.rs  observable.rs  updateable.rs
game/simulation/src/bus/: channel.rs  command.rs  event.rs  mod.rs  receiver.rs  sender.rs
game/simulation/src/component/: airplane_id.rs  flight_plan.rs  location.rs  mod.rs  node.rs  tag.rs  travelled_route.rs
game/simulation/src/entity/: airplane.rs  airport.rs  location.rs  mod.rs  spawner.rs
game/simulation/src/game/: mod.rs
game/simulation/src/map/: airport.rs  direction.rs  grid.rs  loader.rs  location.rs  mod.rs  node.rs
game/simulation/src/state/: mod.rs  ready.rs  running.rs
game/simulation/src/system/: despawn_airplane.rs  detect_collision.rs  generate_flight_plan.rs  mod.rs  move_airplane.rs  spawn_airplane.rs  update_flight_plan.rs
game/simulation/src/util/: airplane_id_generator.rs  mod.rs
game/simulation/tests/: start_game.rs
game/src/: lib.rs  main.rs  rendering.rs
game/src/api/: airplane.rs  atc.rs  event.rs  game.rs  map.rs  mod.rs
game/src/command/: bus.rs  mod.rs  receiver.rs  sender.rs
game/src/components/: airplane.rs  airplane_id.rs  flight_plan.rs  landing.rs  location.rs  mod.rs  speed.rs  tag.rs  travelled_route.rs
game/src/event/: bus.rs  mod.rs  receiver.rs  sender.rs
game/src/map/: airport.rs  direction.rs  mod.rs  node.rs  tile.rs
game/src/resources/: mod.rs  score.rs
game/src/scene/: game.rs  game_over.rs  main_menu.rs  mod.rs
game/src/state/: mod.rs  ready.rs  running.rs
game/src/store/: mod.rs  watcher.rs
game/src/systems/: change_app_state.rs  despawn_airplane.rs  detect_collisions.rs  follow_flight_plan.rs  generate_flight_plan.rs  land_airplane.rs  mod.rs  rotate_airplane.rs  setup_airport.rs  setup_cameras.rs  setup_grid.rs  setup_landscape.rs  spawn_airplane.rs  update_flight_plan.rs
protobufs/: buf.yaml
sdk/dotnet/: AutoTrafficControl.sln  README.md
sdk/java/: .gitignore  README.md  build.gradle  example  gradle.properties  settings.gradle
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py  test.py
src/: main.rs
src/atc-game/: Cargo.toml
src/atc-game/src/: main.rs
src/atc-game/src/api/: airplane.rs  event.rs  game.rs  map.rs  mod.rs
src/atc-game/src/command/: bus.rs  mod.rs
src/atc-game/src/components/: airplane_id.rs  collider.rs  flight_plan.rs  location.rs  mod.rs  travelled_route.rs
src/atc-game/src/event/: bus.rs  mod.rs
src/atc-game/src/map/: mod.rs  routing.rs  tile.rs
src/atc-game/src/state/: ready.rs  running.rs
src/atc-game/src/store/: manager.rs  mod.rs  watcher.rs
src/atc-game/src/systems/: change_app_state.rs  despawn_airplane.rs  detect_collisions.rs  follow_flight_plan.rs  generate_flight_plan.rs  mod.rs  setup_camera.rs  spawn_airplane.rs  update_flight_plan.rs
src/print-client/: Cargo.toml
src/print-client/src/: main.rs
src/starter-rust/: Cargo.toml
src/starter-rust/src/: main.rs  route.rs
utilities/debug-client/: Cargo.toml
utilities/debug-client/src/: main.rs
utilities/test-server/: Cargo.toml
utilities/test-server/src/: main.rs
(+80 files in other folders)
