[package]
name = "atc"
version = "0.0.0"
edition = "2021"

rust-version = "1.56"

description = "A video game for programmers about safely routing airplanes"
repository = "https://github.com/jdno/atc"
categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
geo = "0.19.0"
