[workspace]
members = [
    "examples/rust",
    "game/simulation",
    "sdk/rust",
    "utilities/debug-client",
    "utilities/test-server",
]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.4.0-dev"
edition = "2021"

homepage = "https://auto-traffic-control.com"
repository = "https://github.com/jdno/auto-traffic-control"
