[workspace]
members = [
    "examples/rust",
    "game/api",
    "game/cli",
    "game/simulation",
    "sdk/rust",
    "utilities/debug-client",
    "utilities/test-server",
]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.4.0-dev"
edition = "2021"

# Minimum version with support for workspace inheritance
rust-version = "1.64.0"

homepage = "https://auto-traffic-control.com"
repository = "https://github.com/jdno/auto-traffic-control"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
