[package]
name = "auto-traffic-control-example"
license = "MIT OR Apache-2.0"
version = "0.3.1"
edition = "2021"

description = "An example showing how to use Auto Traffic Control's API"
homepage = "https://auto-traffic-control.com"
repository = "https://github.com/jdno/auto-traffic-control"
categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.3.1" }

tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
