[package]
name = "auto-traffic-control-example"
description = "An example showing how to use Auto Traffic Control's API"

license.workspace = true
version.workspace = true
edition.workspace = true

homepage.workspace = true
repository.workspace = true

categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.4.0-dev" }

tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
