[package]
name = "starter-rust"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

description = "A starter bot for the video game Auto Traffic Control"
repository = "https://github.com/jdno/atc"
categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.1.0", features = ["server"] }

pathfinding = "3.0.11"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8" }
tonic = "0.7.1"
