[package]
name = "simulation"
description = "Run a game session of Auto Traffic Control"

license.workspace = true
version.workspace = true
edition.workspace = true

homepage.workspace = true
repository.workspace = true

publish = false

[dependencies]
geo = "0.23"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
