[package]
name = "simulation"
description = "Run a game session of Auto Traffic Control"

license.workspace = true
version.workspace = true
edition.workspace = true

homepage.workspace = true
repository.workspace = true

publish = false

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.4.0-dev", features = ["server"] }

geo = "0.23"
hecs = "0.9"
lazy_static = "1"
parking_lot = "0.12"
rand = "0.8"
time = "0.3"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }

[dev-dependencies]
float-cmp = "0.9.0"
