[package]
name = "atc-game"
version = "0.0.0"
edition = "2021"

rust-version = "1.56"

description = "A video game for programmers about safely routing airplanes"
repository = "https://github.com/jdno/atc"
categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atc = { path = "../atc", version = "0.0.0", features = ["server"] }

bevy = "0.6.1"
geo = "0.19.0"
prost = "0.9.0"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tonic = "0.6.2"
