[package]
name = "starter-rust"
version = "0.0.0"
edition = "2021"

description = "A starter bot for the video game Auto Traffic Control"
repository = "https://github.com/jdno/atc"
categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atc = { path = "../atc", version = "0.0.0" }
