[package]
name = "debug-client"
description = "Connect to the game and print events to the terminal"

license.workspace = true
version.workspace = true
edition.workspace = true

homepage.workspace = true
repository.workspace = true

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.4.0-dev", features = ["server"] }

tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11" }
