[package]
name = "debug-client"
license = "MIT OR Apache-2.0"
version = "0.3.2"
edition = "2021"

rust-version = "1.56"

description = "Connect to the game and print events to the terminal"
repository = "https://github.com/jdno/atc"
categories = [
    "games"
]

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.3.2", features = ["server"] }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
