[package]
name = "test-server"
description = "Run a mock server for integration tests"

license.workspace = true
version.workspace = true
edition.workspace = true

homepage.workspace = true
repository.workspace = true

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.4.0-dev", features = ["server"] }

prost = "0.11.5"
semver = "1.0.16"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
