[package]
name = "test-server"
license = "MIT OR Apache-2.0"
version = "0.3.2"
edition = "2021"

rust-version = "1.56"

description = "Run a mock server for integration tests"
repository = "https://github.com/jdno/auto-traffic-control"

publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-traffic-control = { path = "../../sdk/rust", version = "0.3.2", features = ["server"] }

prost = "0.11.9"
semver = "1.0.17"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
